# bioecho-os

./: .gitignore  EXECUTION-PLAN.md  README.md  package.json
backend/: .env.example  docker-compose.yml  init.sql
backend/api/: Cargo.toml  Dockerfile
backend/api/src/: main.rs
backend/chat-service/: Dockerfile  app.py  requirements.txt
backend/ml-service/: Dockerfile  app.py  requirements.txt
css/: ldl.css
docs/: index.html
docs/css/: ldl.css  lil.css
docs/js/: app.js  audio-capture.js  bio-search.js  calibration.js  camera.js  emergency.js  evidence.js  landing.js  ldl.js  life.js  lil.js  pets.js  scene3d.js  sound.js  tree.js
docs/living/: index.html
dsp-core/: Cargo.toml
dsp-core/src/: feature_extract.rs  filters.rs  lib.rs  spike_detector.rs
firmware/esp32-diy/: README.md  esp32-diy.ino
firmware/spikerbox-compat/: spikerbox-compat.ino
js/: chart.js  context.js  earth.js  environment.js  experiment.js  hal.js  icons.js  identity.js  ldl.js  marketplace.js  meaning.js  relationship.js  sdk.js  serial.js  sound.js  species.js  timemachine.js  transitions.js
living/: index.html
living/css/: base.css  components.css  sections.css
living/js/: app.js  companion.js  earth.js  forest.js  lab.js  legacy.js
web/: index.html
web/css/: app.css  ldl.css  style.css
web/js/: ambient.js  app.js  audio-capture.js  camera.js  chart.js  chat.js  citizen-science.js  dsp.js  firefly.js  knowledge-graph.js  landing.js  ldl.js  lens.js  local-db.js  main.js  organism.js  predictive.js  research-assistant.js  scene3d.js  scheduler.js  serial.js  tree.js  (+6 more)
(+6 files in other folders)
